# edit-gl

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  configure.sh  main.c
res/: basic.frag  basic.vert
